<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Knitknit</string>

    <!-- ProjectList -->
    <string name="new_project">New project</string>
    <string name="rename_project">Rename</string>
    <string name="delete_project">Delete</string>
    <string name="projectlist_empty">There are no projects yet!</string>
    <string name="projectlist_namedialog_title_create">New Project</string>
    <string name="projectlist_namedialog_title_rename">Rename Project</string>
    <string name="projectlist_namedialog_hint">Name</string>
    <string name="projectlist_namedialog_create">Create</string>
    <string name="projectlist_namedialog_rename">That’s better</string>

    <!-- CountingLand -->
    <string name="new_counter">New counter</string>

    <!-- Counter Contextual Action Mode Menu -->
    <string name="decrease_counter">Decrease counter</string>
    <string name="delete_counter">Delete counter</string>
    <string name="edit_counter">Edit counter</string>
    <string name="increase_counter">Increase counter</string>

    <!-- CounterEditor -->
    <string name="countereditor_label">Edit Counter</string>
    <string name="countereditor_name_hint">Name</string>
    <string name="countereditor_updown_text">Count</string>
    <string name="countereditor_updown_up">up</string>
    <string name="countereditor_updown_down">down</string>
    <string name="countereditor_pattern_checkbox">Pattern repeats every</string>
    <string name="countereditor_pattern_endtext">rows</string>
</resources>
