<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/countereditor_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:typeface="monospace"
        android:capitalize="words"
        android:singleLine="true"
        android:hint="@string/countereditor_name_hint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/countereditor_updown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="6sp"
            android:textSize="18sp"
            android:textColor="@color/countereditor_text"
            android:text="@string/countereditor_updown_text" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf= "@id/countereditor_updown_text"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/countereditor_updown_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6sp"
                android:textSize="18sp"
                android:textColor="@color/countereditor_text"
                android:text="@string/countereditor_updown_up" />
            <RadioButton
                android:id="@+id/countereditor_updown_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/countereditor_text"
                android:text="@string/countereditor_updown_down" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/countereditor_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/countereditor_pattern_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="6sp"
            android:textSize="18sp"
            android:textColor="@color/countereditor_text"
            android:text="@string/countereditor_pattern_checkbox" />
        <EditText
            android:id="@+id/countereditor_pattern_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf= "@id/countereditor_pattern_checkbox"
            android:digits="0123456789"
            android:inputType="phone"
            android:minEms="2"
            android:maxLength="2"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/countereditor_pattern_endtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf= "@id/countereditor_pattern_number"
            android:layout_marginLeft="6sp"
            android:textSize="18sp"
            android:textColor="@color/countereditor_text"
            android:text="@string/countereditor_pattern_endtext" />
    </RelativeLayout>
</LinearLayout>
